# Tech_demo_Deploy

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  README.md  backfill_errors.py  batch_logs.txt  clean_errors.py  context.md  create_baseline.py  debug_db.py  debug_orders.py  debug_products.py  debug_spend.py  generate_errors.py  monitor_and_test.py  package-lock.json  requirements-api.txt  requirements.txt  start_all.sh  test_output.txt
agent_platform/: agent_manager.py  data_sampler.py  ground_truth_generator.py  gt_storage.py  health_checker.py  incremental_gt_generator.py  llm_client.py  poller.py  prompt_builder.py  relationship_discovery.py  schema_change_detector.py  schema_discovery.py  schema_monitor_scheduler.py
agents/: base_agent.py  demand_agent.py  llm_client.py  run_agents.py  spend_agent.py
alerts/: __init__.py  alert_service.py
api/: main.py
auth/: __init__.py  api_keys.py  azure_auth.py
config/: settings.py
dashboard/: index.html  nginx.conf  package-lock.json  package.json
data/: agent_outputs.json  ground_truth_generator.py  ground_truth_generator_1000.py
database/: connection.py  init_db.py  load_data.py  schemas.py
docs/: CODE_EXPLAINED.md  CONCLUSION.md  Dataset_Analysis.md  INTRODUCTION.md  Implementation_Plan.md
evaluation/: OUTPUT_VALIDATION_README.md  evaluator.py  gt_generator.py  llm_judge.py  semantic_checker.py  semantic_match.py  test_evaluator.py  validators.py
k8s/: api-deployment.yaml  configmap.yaml  (+6 more)
sdk/: pyproject.toml  setup.py
sdk/agent_observe_sdk/: __init__.py  observer.py
(+108 files in other folders)
